--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/webreinvent/vaahfy.git"
+    "url": "https://github.com/webreinvent/vaahfy.git"
   },
   "devDependencies": {
     "cross-env": "^7.0.0",
     "fs": "0.0.1-security",
     "fs-extra": "^8.1.0",
-    "laravel-mix": "^4.0.7",
-    "node-sass": "^4.12.0",
+    "laravel-mix": "^6",
+    "node-sass": "^6",
     "resolve-url-loader": "^3.1.0",
-    "sass-loader": "^7.3.1"
+    "sass": "^1.45.1",
+    "sass-loader": "^10"
   },
   "keywords": [
     "bulma",
